# DiligentCore

./: .gitignore  .gitmodules
Common/interface/: FixedLinearAllocator.hpp
Graphics/: CMakeLists.txt
Graphics/ArchiveJSON/: CMakeLists.txt
Graphics/ArchiveJSON/include/: Comporators.hpp  DeviceObjectReflection.hpp  EngineEnvironment.hpp  Generated_Common.hpp  Generated_GraphicsTypes.hpp  Generated_InputLayout.hpp  Generated_PipelineResourceSignature.hpp  Generated_PipelineState.hpp  Generated_RasterizerState.hpp  Generated_RenderPass.hpp  Generated_Shader.hpp  pch.h
Graphics/ArchiveJSON/scripts/: cxx_config.py  cxx_parser.py  cxx_template.py
Graphics/ArchiveJSON/src/: Archive.cpp  DeviceObjectReflection.cpp  EngineEnvironment.cpp
Graphics/Archiver/include/: ArchiverImpl.hpp  SerializableResourceSignatureImpl.hpp  SerializationDeviceImpl.hpp
Graphics/Archiver/src/: ArchiverImpl_PRS.cpp  ArchiverImpl_PSO.cpp
Graphics/ArchiverJSON/: CMakeLists.txt
Graphics/ArchiverJSON/include/: DeviceObjectReflection.hpp  EngineEnvironment.hpp  Generated_Common.hpp  Generated_PipelineState.hpp  pch.h
Graphics/ArchiverJSON/scripts/: cxx_config.py  cxx_parser.py  cxx_template.py
Graphics/ArchiverJSON/src/: Archiver.cpp  DeviceObjectReflection.cpp  EngineEnvironment.cpp
Graphics/GraphicsAccessories/src/: GraphicsAccessories.cpp
Graphics/GraphicsEngine/include/: DeviceContextBase.hpp  DeviceMemoryBase.hpp  PipelineStateBase.hpp  RenderDeviceBase.hpp  Serializer.hpp
Graphics/GraphicsEngine/interface/: Buffer.h  DeviceContext.h  DeviceMemory.h  GraphicsTypes.h  RenderDevice.h  Texture.h
Graphics/GraphicsEngine/src/: BufferBase.cpp  DeviceContextBase.cpp  DeviceMemoryBase.cpp  DeviceObjectArchiveBase.cpp  RenderDeviceBase.cpp  TextureBase.cpp
Graphics/GraphicsEngineD3D11/: CMakeLists.txt
Graphics/GraphicsEngineD3D11/include/: DeviceContextD3D11Impl.hpp  DeviceMemoryD3D11Impl.hpp  ShaderD3D11Impl.hpp  TextureBaseD3D11.hpp
Graphics/GraphicsEngineD3D11/interface/: DeviceMemoryD3D11.h
Graphics/GraphicsEngineD3D11/src/: BufferD3D11Impl.cpp  DeviceContextD3D11Impl.cpp  DeviceMemoryD3D11Impl.cpp  EngineFactoryD3D11.cpp  PipelineResourceSignatureD3D11Impl.cpp  PipelineStateD3D11Impl.cpp  ShaderD3D11Impl.cpp  Texture1D_D3D11.cpp  Texture2D_D3D11.cpp  Texture3D_D3D11.cpp  TextureBaseD3D11.cpp
Graphics/GraphicsEngineD3D12/include/: CommandQueueD3D12Impl.hpp  RenderDeviceD3D12Impl.hpp  TextureD3D12Impl.hpp
Graphics/GraphicsEngineD3D12/interface/: CommandQueueD3D12.h
Graphics/GraphicsEngineD3D12/src/: BufferD3D12Impl.cpp  CommandQueueD3D12Impl.cpp  DeviceContextD3D12Impl.cpp  DeviceMemoryD3D12Impl.cpp  EngineFactoryD3D12.cpp  PipelineStateD3D12Impl.cpp  RenderDeviceD3D12Impl.cpp  TextureD3D12Impl.cpp
Graphics/GraphicsEngineMetal/interface/: RenderDeviceMtl.h
Graphics/GraphicsEngineOpenGL/include/: TextureBaseGL.hpp
Graphics/GraphicsEngineOpenGL/src/: BufferGLImpl.cpp  DeviceContextGLImpl.cpp  PipelineResourceSignatureGLImpl.cpp  RenderDeviceGLImpl.cpp  TextureBaseGL.cpp
Graphics/GraphicsEngineVulkan/: CMakeLists.txt
Graphics/GraphicsEngineVulkan/include/: PipelineResourceAttribsVk.hpp  RenderDeviceVkImpl.hpp  TextureVkImpl.hpp  VulkanTypeConversions.hpp
Graphics/GraphicsEngineVulkan/interface/: CommandQueueVk.h
Graphics/GraphicsEngineVulkan/src/: BufferVkImpl.cpp  DeviceContextVkImpl.cpp  DeviceMemoryVkImpl.cpp  EngineFactoryVk.cpp  PipelineResourceSignatureVkImpl.cpp  PipelineStateVkImpl.cpp  RenderDeviceVkImpl.cpp  TextureVkImpl.cpp  VulkanTypeConversions.cpp
Graphics/GraphicsTools/include/: GPUUploadManagerImpl.hpp
Graphics/GraphicsTools/src/: GPUUploadManagerImpl.cpp
Graphics/ShaderTools/include/: DXBCUtils.hpp
Graphics/ShaderTools/src/: DXCompiler.cpp
Tests/DiligentCoreAPITest/include/InlineShaders/: SparseMemoryTestHLSL.h
Tests/DiligentCoreAPITest/src/: ArchiveTest.cpp  DXCompilerTest.cpp  GPUUploadManagerTest.cpp  PipelineResourceSignatureTest.cpp
Tests/DiligentCoreTest/src/GraphicsTools/: GPUUploadManagerPageTest.cpp
